# sandbox

./: .flake8  .travis.yml  README.md  build.bat  build.sh  build_osx.sh  hello.bat  hello.sh  index.html  index.md  pyproject.toml
.github/workflows/: github-actions-demo.yml  python-app.yml  python-release.yml  python-unittest.yml
sandbox/: __main__.py
tests/: test_doctest.py
